REDIS/eksdev/argocd/deploy/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis724-svc-eksdev
  namespace: eksdev
  labels:
    app: redis724
    tier: database
    code: sql
    country: cl
    language: es
    environment: eksdev
spec:
  type: NodePort
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
      nodePort: 30379
  selector:
    app: redis724
